@@ -202,17 +202,19 @@ ags_midi_dialog_init(AgsMidiDialog *midi_dialog)
 		     FALSE, FALSE,
 		     0);
 
-  midi_dialog->playback = (GtkCheckButton *) gtk_check_button_new_with_label("playback\0");
-  gtk_box_pack_start((GtkBox *) midi_dialog->io_options,
-		     GTK_WIDGET(midi_dialog->playback),
-		     FALSE, FALSE,
-		     0);
+  midi_dialog->playback = NULL;
+  //  midi_dialog->playback = (GtkCheckButton *) gtk_check_button_new_with_label("playback\0");
+  //  gtk_box_pack_start((GtkBox *) midi_dialog->io_options,
+  //		     GTK_WIDGET(midi_dialog->playback),
+  //		     FALSE, FALSE,
+  //		     0);
 
-  midi_dialog->record = (GtkCheckButton *) gtk_check_button_new_with_label("record\0");
-  gtk_box_pack_start((GtkBox *) midi_dialog->io_options,
-		     GTK_WIDGET(midi_dialog->record),
-		     FALSE, FALSE,
-		     0);
+  midi_dialog->record = NULL;
+  //  midi_dialog->record = (GtkCheckButton *) gtk_check_button_new_with_label("record\0");
+  //  gtk_box_pack_start((GtkBox *) midi_dialog->io_options,
+  //		     GTK_WIDGET(midi_dialog->record),
+  //		     FALSE, FALSE,
+  //		     0);
 
   /* mapping */
   midi_dialog->mapping = (GtkVBox *) gtk_vbox_new(FALSE, 0);
